--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,62 +1,126 @@
-*{
+* {
     padding: 0;
 }
-li{
+
+body {
+    background-color: #eeeeee;
+    padding-top: 4.3rem;
+    padding-bottom: 0;
+}
+
+body.page-login main,
+body.page-register main,
+body.page-login main #content-wrapper,
+body.page-register main #content-wrapper,
+body.page-login main #content-wrapper > .row,
+body.page-register main #content-wrapper > .row {
+    height: 100%;
+}
+
+fieldset {
+    background-color: white;
+    margin: 0;
+    padding: 0;
+    border: 2px solid #7952b3;
+    border-radius: 7px;
+}
+
+fieldset p {
+    margin: 1em;
+}
+
+legend {
+    color: white;
+    background-color: #7952b3;
+    float: right;
+    padding: 0.2em 1em;
+    width: 30%;
+    border-bottom-left-radius: 1em;
+    font-size: 1rem;
+}
+
+li {
     list-style-type: none;
 }
-.tag-form{
+
+.tag-form {
     display: none;
 }
-.tag-invalid-feedback{
+
+.tag-invalid-feedback {
     display: none;
     width: 100%;
-    margin-top: .25rem;
+    margin-top: 0.25rem;
     font-size: 80%;
     color: #dc3545;
 }
 
-.main-container{
+.main-container {
     max-width: 1200px;
 }
 
-.fixed-panel{
+.fixed-panel {
     top: 60px;
 }
 
-.tags{
+.tags {
     font-size: 12px;
 }
 
-#posts{
-    max-width: 60%;
+.tags:hover,
+.tags.active {
+    background-color: #7952b3;
+    color: white;
 }
-#btn-login-google{
+
+.tags.active {
+    border-color: #7952b3;
+}
+
+#btn-login-google {
     background-color: #dd4b39;
 }
-#btn-login-fb{
+
+#btn-login-fb {
     background-color: #3b5998;
 }
 
-.panel{
-    overflow: hidden;
-    overflow-y: scroll;
-    position: sticky;
+.navbar {
+    background-color: #7952b3;
 }
 
-@media (max-width: 1080px) {
-    #panel-left{
-        display: none;
+.navbar .btn-outline-primary {
+    color: #fefeff;
+    background-color: #4c2980;
+    border-color: #f2f8ff;
+}
+
+.navbar-brand,
+.navbar .nav-link {
+    color: #fff;
+}
+
+.navbar .form-control:focus {
+    box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
+}
+
+.h7 {
+    font-size: 0.8rem;
+}
+
+@media (min-width: 992px) {
+    .gedf-main {
+        padding-left: 4rem;
+        padding-right: 4rem;
     }
-    #panel-right{
-        max-width: 35%;
+
+    .gedf-card {
+        margin-bottom: 2.77rem;
     }
 }
 
-@media (max-width: 800px) {
-    #posts{
-        max-width: 100%;
-    }
-    .fixed-panel{
-        display: none;
-    }
+/**Reset Bootstrap*/
+.dropdown-toggle::after {
+    content: none;
+    display: none;
 }
