--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,7 +1,8 @@
 <% layout('layout/boilerplate')%>
 
 <%- include('../partials/panel-left')%>
-<div class="mx-auto" id="posts">
+
+<div class="col-md-6">
     <% for (let post of posts){%>
         <div class="card mb-3 shadow-lg">
             <div class="row">
@@ -15,13 +16,13 @@
                         </h5>
                         <div id="<%=post._id%>" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner mb-3">
-                                <% post.images.forEach((img, i) => { %> 
+                                <% post.images.forEach((img, i) => { %>
                                 <div class="carousel-item <%= i === 0 ? 'active' : '' %> border border-secondary">
                                     <img src="<%=img.url%>" class="d-block w-100" alt="...">
                                 </div>
                                 <% }) %>
                             </div>
-                            <% if(post.images.length > 1) { %> 
+                            <% if(post.images.length > 1) { %>
                                 <a class="carousel-control-prev" href="#<%=post._id%>" role="button" data-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
@@ -30,7 +31,7 @@
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
-                            <% } %> 
+                            <% } %>
                         </div>
                         <% if(currentUser) { %>
                             <%  if(post.upvote.includes(currUser._id)) { %>
@@ -44,7 +45,7 @@
                                         <span class="downvote-value" id="<%=post._id%>downspan"><%=post.downvoteNum%></span>
                                     </button>
                                 </form>
-                            <% } else if(post.downvote.includes(currUser._id)) { %> 
+                            <% } else if(post.downvote.includes(currUser._id)) { %>
                                 <form class="upvote-form d-inline" data-id="<%=post._id%>">
                                     <button class="btn btn-secondary btn-upvote" type="submit" id="<%=post._id%>upbtn">&#10224;
                                         <span class="upvote-value" id="<%=post._id%>upspan"><%=post.upvoteNum%></span>
@@ -66,8 +67,8 @@
                                         <span class="downvote-value" id="<%=post._id%>downspan"><%=post.downvoteNum%></span>
                                     </button>
                                 </form>
-                            <% } %> 
-                        <% } else { %> 
+                            <% } %>
+                        <% } else { %>
                             <form class="upvote-form d-inline" data-id="<%=post._id%>" data-toggle="tooltip" data-placement="bottom" title="gotta login to vote">
                                 <button class="btn btn-secondary btn-upvote disabled" type="submit">&#10224;
                                     <span class="upvote-value" ><%=post.upvoteNum%></span>
@@ -78,7 +79,7 @@
                                     <span class="downvote-value"><%=post.downvoteNum%></span>
                                 </button>
                             </form>
-                        <% } %> 
+                        <% } %>
                         <a class="btn btn-secondary" href="/posts/<%=post._id%>"><i class="fa fa-comments-o"></i> <%=(post.comments) ? post.comments.length : 0 %></a>
                     </div>
                 </div>
