--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,7 +1,7 @@
 <% layout('layout/boilerplate')%>
-<div class="container d-flex justify-content-center align-items-center mt-5">
+<div class="container d-flex justify-content-center align-items-center h-100 w-100">
     <div class="row">
-        <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+        <div class="col-12">
             <div class="card shadow">
                 <div class="card-body">
                     <h5 class="card-title text-center">Register</h5>
