Update Migration to Backblaze B2 and Project Improvements

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,16 @@ body.page-register main #content-wrapper > .row {
     height: 100%;
 }
 
+.btn-primary {
+    background-color: #7952b3 !important;
+    border-color: #7952b3 !important;
+}
+
+.btn-primary:hover {
+    background-color: #6c459b !important;
+    border-color: #6c459b !important;
+}
+
 fieldset {
     background-color: white;
     margin: 0;
