--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -7,7 +7,7 @@
 
 <% if(error && error.length) {%>
     <div class="alert alert-danger alert-dismissible" role="alert">
-        <div><%= success %></div>
+        <div><%= error %></div>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% } %>
