Update environment and image handling configurations

--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -38,7 +38,7 @@
                     <fieldset class="mb-3">
                         <legend><label class="m-0" for="tags">Add some tags to your post</label></legend>
                         <div class="m-3">
-                            <select name="post[tag]" class="form-control" id="post-tags" multiple="multiple" required>
+                            <select name="post[tags]" class="form-control" id="post-tags" multiple="multiple" required>
                             </select>
                             <div class="valid-feedback">
                                 Looks good!
