--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -1,14 +1,15 @@
 <% layout('layout/boilerplate') %>
 
 <%- include('../partials/panel-left')%>
+
 <div class="col-md-6">
     <div class="card mb-3">
         <div class="row ">
             <div class="col">
                 <div class="card-body">
-                    <% for(let tag of post.tags) { %>
-                        <a href="<%=tag.url%> "><div class="btn btn-dark btn-sm tags"><%=tag.body%></div></a>
-                    <% } %>
+                    <% post.tags.forEach((tag) => { %>
+                        <a href="<%=tag%> "><div class="btn btn-dark btn-sm tags"><%=tag%></div></a>
+                    <% }) %>
                     <h5 class="card-title mb-3">
                         <b><%= post.title %></b>
                     </h5>
