--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -2,7 +2,7 @@
 
 <%- include('../partials/panel-left')%>
 
-<div class="col-md-6">
+<div class="col-sm-12 col-md-12 col-lg-6">
     <% for (let post of posts){%>
         <div class="card mb-3 shadow-lg">
             <div class="row">
