--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,6 +110,10 @@ li {
     color: #fff;
 }
 
+.nav-link {
+    white-space: nowrap;
+}
+
 .navbar .form-control:focus {
     box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
 }
