--- a/views/partials/panel-left.ejs
+++ b/views/partials/panel-left.ejs
@@ -1,4 +1,4 @@
-<div class="col-md-3">
+<div class="col-sm-12 col-md-12 col-lg-3 mt-sm-3 mt-xs-3">
     <div class="card gedf-card">
         <div class="card-body">
             <h5 class="card-title">Popular</h5>
@@ -11,7 +11,7 @@
             </p>
         </div>
     </div>
-    <div class="card gedf-card">
+    <div class="card gedf-card my-sm-3 my-xs-3">
         <div class="card-body">
             <h5 class="card-title">All Sections</h5>
             <p class="card-text">
