--- a/views/partials/panel-right.ejs
+++ b/views/partials/panel-right.ejs
@@ -1,4 +1,4 @@
-<div class="col-md-3">
+<div class="col-sm-12 col-md-12 col-lg-3">
     <!-- Profile picture card-->
     <div class="card mb-4 mb-xl-0">
         <div class="card-header">Profile</div>
