--- a/views/partials/panel-left.ejs
+++ b/views/partials/panel-left.ejs
@@ -1,7 +1,7 @@
 <div class="col-sm-12 col-md-12 col-lg-3 mt-sm-3 mt-xs-3">
     <div class="card gedf-card">
         <div class="card-body">
-            <h5 class="card-title">Popular</h5>
+            <h5 class="card-title">Popular Tags</h5>
             <p class="card-text">
             <ul>
                 <% for(let pt of popularTags) { %>
@@ -16,9 +16,7 @@
             <h5 class="card-title">All Sections</h5>
             <p class="card-text">
             <ul>
-                <% for(let tag of tags) { %>
-                    <li><a href="/<%= tag.url %>" class="tags"><%= tag.body %></a></li>
-                <% } %>
+                <li>To be implemented</li>
             </ul>
             </p>
         </div>
