--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -8,7 +8,9 @@
             <div class="row">
                 <div class="col">
                     <div class="card-body">
-                        <a href="<%=post.tags[0].url%> "><div class="btn btn-dark btn-sm tags"><%=post.tags[0].body%></div></a>
+                        <% post.tags.forEach((tag) => { %>
+                            <a href="/posts/tagged/<%=encodeURIComponent(tag)%> "><div class="btn btn-dark btn-sm tags"><%=tag%></div></a>
+                        <% }) %>
                         <h5 class="card-title">
                             <b>
                                 <a href="/posts/<%=post._id%>" class="text-decoration-none text-dark" data-placement="top"><%= post.title %></a>
