--- a/views/partials/panel-left.ejs
+++ b/views/partials/panel-left.ejs
@@ -1,24 +1,12 @@
-<div class="col-sm-12 col-md-12 col-lg-3 mt-sm-3 mt-xs-3">
-    <div class="card gedf-card">
-        <div class="card-body">
-            <h5 class="card-title">Popular Tags</h5>
-            <p class="card-text">
-            <ul>
+<div class="col-sm-12 col-md-12 col-lg-3">
+    <div class="card mb-4 mb-xl-0">
+        <div class="card-header">Popular Tags</div>
+        <div class="card-body text-left">
+            <ul class="list-unstyled">
                 <% for(let pt of popularTags) { %>
-                    <li><a href="/<%= pt.url %>"><%= pt.body %></a></li>
+                    <li><a href="/posts/tagged/<%=encodeURIComponent(pt.name)%>"><%= pt.name %></a></li>
                 <% } %>
             </ul>
-            </p>
-        </div>
-    </div>
-    <div class="card gedf-card my-sm-3 my-xs-3">
-        <div class="card-body">
-            <h5 class="card-title">All Sections</h5>
-            <p class="card-text">
-            <ul>
-                <li>To be implemented</li>
-            </ul>
-            </p>
         </div>
     </div>
 </div>
