--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -20,7 +20,7 @@
                             <div class="carousel-inner mb-3">
                                 <% post.images.forEach((img, i) => { %>
                                 <div class="carousel-item <%= i === 0 ? 'active' : '' %> border border-secondary">
-                                    <img src="<%=img.url%>" class="d-block w-100" alt="...">
+                                    <img src="<%=img.url%>" class="d-block w-100" alt="meme" loading="lazy" />
                                 </div>
                                 <% }) %>
                             </div>
