--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -30,10 +30,10 @@
                         </div>
                         <button class="btn btn-success w-100">Login</button>
                         <a class="btn w-100 text-light my-2" id="btn-login-google" href="/auth/google">
-                            <i class="fab fa-google"></i> Login with Google
+                            <i class="fa fa-google"></i> Login with Google
                         </a>
                         <a class="btn w-100 text-light" id="btn-login-fb">
-                            <i class="fab fa-facebook-f"></i> Login with Facebook
+                            <i class="fa fa-facebook-f"></i> Login with Facebook
                         </a>
                     </form>
                     <p class="text-center mt-3">Don't have an account? <a href="/register" class="text-decoration-none">Create an Account</a></p>
