--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -19,7 +19,7 @@
     <%- include('../partials/navbar') %>
         <main class="container-fluid">
             <div class="row px-3" id="content-wrapper">
-                <div class="col-md-12">
+                <div class="col-md-6 mx-auto">
                     <%- include('../partials/flash')%>
                 </div>
                 <div class="row d-flex justify-content-center align-items-start flex-lg-row flex-md-row flex-sm-column">
