Refactor post display to use post partial and update voting UI
Extract post card markup into a partial for reuse in index view.
Simplify voting buttons with consistent disabled state and tooltips.
Adjust layout container width for larger screens.
Upgrade backblaze-b2 dependency to 2.0.5.

--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -19,7 +19,7 @@
     <%- include('../partials/navbar') %>
         <main class="container-fluid">
             <div class="row px-3" id="content-wrapper">
-                <div class="col-md-6 mx-auto">
+                <div class="col-md-6 col-xl-10 mx-auto">
                     <%- include('../partials/flash')%>
                 </div>
                 <div class="row d-flex justify-content-center align-items-start flex-lg-row flex-md-row flex-sm-column">
