--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,92 +1,9 @@
 <% layout('layout/boilerplate')%>
 
 <%- include('../partials/panel-left')%>
-
 <div class="col-sm-12 col-md-12 col-lg-6">
     <% for (let post of posts){%>
-        <div class="card mb-3 shadow-lg">
-            <div class="row">
-                <div class="col">
-                    <div class="card-body">
-                        <% post.tags.forEach((tag) => { %>
-                            <a href="/posts/tagged/<%=encodeURIComponent(tag)%> "><div class="btn btn-dark btn-sm tags"><%=tag%></div></a>
-                        <% }) %>
-                        <h5 class="card-title">
-                            <b>
-                                <a href="/posts/<%=post._id%>" class="text-decoration-none text-dark" data-placement="top"><%= post.title %></a>
-                            </b>
-                        </h5>
-                        <div id="<%=post._id%>" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner mb-3">
-                                <% post.images.forEach((img, i) => { %>
-                                <div class="carousel-item <%= i === 0 ? 'active' : '' %> border border-secondary">
-                                    <img src="<%=img.url%>" class="d-block w-100" alt="meme" loading="lazy" />
-                                </div>
-                                <% }) %>
-                            </div>
-                            <% if(post.images.length > 1) { %>
-                                <a class="carousel-control-prev" href="#<%=post._id%>" role="button" data-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="carousel-control-next" href="#<%=post._id%>" role="button" data-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Next</span>
-                                </a>
-                            <% } %>
-                        </div>
-                        <% if(currentUser) { %>
-                            <%  if(post.upvote.includes(currUser._id)) { %>
-                                <form class="upvote-form d-inline" data-id="<%=post._id%>">
-                                    <button class="btn btn-primary btn-upvote" type="submit" id="<%=post._id%>upbtn">&#10224;
-                                        <span class="upvote-value" id="<%=post._id%>upspan"><%=post.upvoteNum%></span>
-                                    </button>
-                                </form>
-                                <form class="downvote-form d-inline" data-id="<%=post._id%>">
-                                    <button class="btn btn-secondary btn-downvote" type="submit" id="<%=post._id%>downbtn">&#10225;
-                                        <span class="downvote-value" id="<%=post._id%>downspan"><%=post.downvoteNum%></span>
-                                    </button>
-                                </form>
-                            <% } else if(post.downvote.includes(currUser._id)) { %>
-                                <form class="upvote-form d-inline" data-id="<%=post._id%>">
-                                    <button class="btn btn-secondary btn-upvote" type="submit" id="<%=post._id%>upbtn">&#10224;
-                                        <span class="upvote-value" id="<%=post._id%>upspan"><%=post.upvoteNum%></span>
-                                    </button>
-                                </form>
-                                <form class="downvote-form d-inline" data-id="<%=post._id%>">
-                                    <button class="btn btn-primary btn-downvote" type="submit" id="<%=post._id%>downbtn">&#10225;
-                                        <span class="downvote-value" id="<%=post._id%>downspan"><%=post.downvoteNum%></span>
-                                    </button>
-                                </form>
-                            <% } else { %>
-                                <form class="upvote-form d-inline" data-id="<%=post._id%>">
-                                    <button class="btn btn-secondary btn-upvote" type="submit" id="<%=post._id%>upbtn">&#10224;
-                                        <span class="upvote-value" id="<%=post._id%>upspan"><%=post.upvoteNum%></span>
-                                    </button>
-                                </form>
-                                <form class="downvote-form d-inline" data-id="<%=post._id%>">
-                                    <button class="btn btn-secondary btn-downvote" type="submit" id="<%=post._id%>downbtn">&#10225;
-                                        <span class="downvote-value" id="<%=post._id%>downspan"><%=post.downvoteNum%></span>
-                                    </button>
-                                </form>
-                            <% } %>
-                        <% } else { %>
-                            <form class="upvote-form d-inline" data-id="<%=post._id%>" data-toggle="tooltip" data-placement="bottom" title="gotta login to vote">
-                                <button class="btn btn-secondary btn-upvote disabled" type="submit">&#10224;
-                                    <span class="upvote-value" ><%=post.upvoteNum%></span>
-                                </button>
-                            </form>
-                            <form class="downvote-form d-inline" data-id="<%=post._id%>" data-toggle="tooltip" data-placement="bottom" title="gotta login to vote">
-                                <button class="btn btn-secondary btn-downvote disabled" type="submit">&#10225;
-                                    <span class="downvote-value"><%=post.downvoteNum%></span>
-                                </button>
-                            </form>
-                        <% } %>
-                        <a class="btn btn-secondary" href="/posts/<%=post._id%>"><i class="fa fa-comments-o"></i> <%=(post.comments) ? post.comments.length : 0 %></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <%- include('../partials/post', {post})%>
     <% }%>
 </div>
 <%- include('../partials/panel-right')%>
