Rename app to "My Awesome Meme" and update routes, views, and scripts accordingly

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand-md fixed-top px-3">
+ллл<nav class="navbar navbar-expand-md fixed-top px-3">
     <a href="/" class="navbar-brand">My Awesome Meme</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav me-auto">
-            <a class="nav-link" href="/posts">Posts</a>
+            <a class="nav-link" href="/">Posts</a>
             <a class="nav-link" href="/posts/new">New Post</a>
             <a class="nav-link" href="/posts/random">Random</a>
             <% if(currentUser && currentUser.role == ("admin")) { %>
@@ -14,10 +14,10 @@
         </div>
         <div class="navbar-nav ms-auto">
             <% if(!currentUser) { %>
-                <a class="nav-link" href="/login">Login</a>
-                <a class="nav-link" href="/register">Register</a>
+                <a class="nav-link" href="/users/login">Login</a>
+                <a class="nav-link" href="/users/register">Register</a>
             <% } else { %>
-                <a class="nav-link" href="/logout">Logout</a>
+                <a class="nav-link" href="/users/logout">Logout</a>
             <% } %>
         </div>
         <form class="d-flex">
