--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -6,7 +6,7 @@
             <div class="card shadow">
                 <div class="card-body">
                     <h5 class="card-title text-center">Login</h5>
-                    <form action="/login" method="POST" class="form-validation" novalidate>
+                    <form action="/users/login" method="POST" class="form-validation" novalidate>
                         <div class="mb-3">
                             <label class="form-label" for="username">Username</label>
                             <input class="form-control" type="text" id="username" name="username" autofocus required>
