--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -38,7 +38,7 @@
                         </div>
                         <button class="btn btn-success btn-block">Register</button>
                     </form>
-                    <p class="text-center mt-3">Have an account? <a href="/login" class="text-decoration-none">Login</a></p>
+                    <p class="text-center mt-3">Have an account? <a href="/users/login" class="text-decoration-none">Login</a></p>
                 </div>
             </div>
         </div>
