Add Facebook login and admin role support; remove tags feature

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-ллл<nav class="navbar navbar-expand-md fixed-top px-3">
+<nav class="navbar navbar-expand-md fixed-top px-3">
     <a href="/" class="navbar-brand">My Awesome Meme</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
