Add static pages with content and update page routing and layout
- Introduce Terms of Service, Privacy Policy, and User Data Deletion
  pages seeded with fixed slugs
- Change page route param from pageId to slug for friendly URLs
- Add views/pages/show.ejs to render static page content with title
- Fix footer layout with CSS and adjust boilerplate for page padding
- Set page titles dynamically for posts, pages, and tagged posts
- Correct page route prefix from /pages to /page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@
 body {
     background-color: #eeeeee;
     padding-top: 4.3rem;
-    padding-bottom: 0;
+    padding-bottom: 4.3rem;
 }
 
 body.page-login main,
@@ -15,6 +15,17 @@ body.page-register main #content-wrapper,
 body.page-login main #content-wrapper > .row,
 body.page-register main #content-wrapper > .row {
     height: 100%;
+}
+
+body > main {
+    height: calc(100% - 50px);
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 .btn-primary {
