--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -18,8 +18,8 @@
 <body class="d-flex flex-column ustify-content-center h-100 <%- page -%>">
     <%- include('../partials/navbar') %>
         <main class="container-fluid">
-            <div class="row px-3" id="content-wrapper">
-                <div class="col-md-6 col-xl-10 mx-auto">
+            <div class="row px-3 pb-5" id="content-wrapper">
+                <div class="col-md-12 col-xl-10 mx-auto">
                     <%- include('../partials/flash')%>
                 </div>
                 <div class="row d-flex justify-content-center align-items-start flex-lg-row flex-md-row flex-sm-column">
