Add Facebook authentication support

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,8 @@
 <footer class="footer bg-dark py-3 mt-auto">
     <div class="container">
-        <span class="text-white">&copy; My Awesome Meme 2026</span>
+        <span class="text-white">&copy; My Awesome Meme 2026 &bull;</span>
+        <a href="/page/tos" class="text-white">TOS</a> <span class="text-white">&bull;</span>
+        <a href="/page/privacy-policy" class="text-white">Privacy Policy</a> <span class="text-white">&bull;</span>
+        <a href="/page/user-data-deletion" class="text-white">Delete Account</a>
     </div>
 </footer>
