--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -32,7 +32,7 @@
                         <a class="btn w-100 text-light my-2" id="btn-login-google" href="/auth/google">
                             <i class="fa fa-google"></i> Login with Google
                         </a>
-                        <a class="btn w-100 text-light" id="btn-login-fb">
+                        <a class="btn w-100 text-light" id="btn-login-fb" href="/auth/facebook">
                             <i class="fa fa-facebook-f"></i> Login with Facebook
                         </a>
                     </form>
