--- a/views/partials/panel-left.ejs
+++ b/views/partials/panel-left.ejs
@@ -1,12 +1,24 @@
 <div class="col-sm-12 col-md-12 col-lg-3">
-    <div class="card mb-4 mb-xl-0">
-        <div class="card-header">Popular Tags</div>
-        <div class="card-body text-left">
-            <ul class="list-unstyled">
-                <% for(let pt of popularTags) { %>
-                    <li><a href="/posts/tagged/<%=encodeURIComponent(pt.name)%>"><%= pt.name %></a></li>
-                <% } %>
-            </ul>
+    <img src="/images/myawesomeme.png" alt="My Awesome Meme Logo" class="img-fluid">
+        <!-- Profile picture card-->
+        <div class="card mb-4 mb-xl-0">
+            <div class="card-header">Profile</div>
+            <div class="card-body text-center">
+                <!-- Profile picture image-->
+
+                <img class="img-account-profile rounded-circle mb-2" src="<%= gravatar %>" alt="Gravatar">
+                <!-- Profile picture help block-->
+                <div class="small font-italic text-muted mb-4">
+                    <% if(!currentUser) { %>
+                        <a class="btn btn-primary" href="/users/login">Login</a>
+                        <br />
+                        <small>Don't have an account? <a href="/users/register">Register</a></small>
+                    <% } else { %>
+                        >Welcome, <%=currentUser.username.toUpperCase() %><br />
+                        <a class="btn btn-primary" href="/users/logout">Logout</a>
+                    <% } %>
+                </div>
+                <!-- Profile picture upload button-->
+            </div>
         </div>
-    </div>
 </div>
