--- a/views/partials/panel-right.ejs
+++ b/views/partials/panel-right.ejs
@@ -1,24 +1,12 @@
 <div class="col-sm-12 col-md-12 col-lg-3">
-    <!-- Profile picture card-->
     <div class="card mb-4 mb-xl-0">
-        <div class="card-header">Profile</div>
-        <div class="card-body text-center">
-            <!-- Profile picture image-->
-
-            <img class="img-account-profile rounded-circle mb-2" src="<%= gravatar %>" alt="Gravatar">
-            <!-- Profile picture help block-->
-            <div class="small font-italic text-muted mb-4">
-                <% if(!currentUser) { %>
-                    <a class="btn btn-primary" href="/users/login">Login</a>
-                    <br />
-                    <small>Don't have an account? <a href="/users/register">Register</a></small>
-                <% } else { %>
-                    <a href="/users/profile">Welcome, <%=currentUser.username.toUpperCase() %></a><br />
-                    <a class="btn btn-primary" href="/users/logout">Logout</a>
+        <div class="card-header">Popular Tags</div>
+        <div class="card-body text-left">
+            <ul class="list-unstyled">
+                <% for(let pt of popularTags) { %>
+                    <li><a href="/posts/tagged/<%=encodeURIComponent(pt.name)%>"><%= pt.name %></a></li>
                 <% } %>
-            </div>
-            <!-- Profile picture upload button-->
-
+            </ul>
         </div>
     </div>
 </div>
