--- a/views/partials/post.ejs
+++ b/views/partials/post.ejs
@@ -14,7 +14,9 @@
                     <div class="carousel-inner mb-3">
                         <% post.images.forEach((img, i) => { %>
                         <div class="carousel-item <%= i === 0 ? 'active' : '' %> border border-secondary">
+                            <a href="/posts/<%=post._id%>">
                             <img src="<%=img.url%>" class="d-block w-100" alt="meme" loading="lazy" />
+                            </a>
                         </div>
                         <% }) %>
                     </div>
@@ -29,42 +31,8 @@
                         </a>
                     <% } %>
                 </div>
-                <% if(currentUser) { %>
-                    <form class="upvote-form d-inline" data-id="<%=post._id%>">
-                        <button class="btn btn-primary btn-upvote <%=(post.upvote.includes(currUser._id) ? 'disabled' : '')%>" type="submit" id="<%=post._id%>upbtn">
-                            <i class="fa fa-thumbs-up" aria-hidden="true"></i>
-                            <span class="upvote-value" id="<%=post._id%>upspan"><%=post.upvoteNum ?? 0%></span>
-                        </button>
-                    </form>
-                    <form class="downvote-form d-inline" data-id="<%=post._id%>">
-                        <button class="btn btn-secondary btn-downvote <%=(post.downvote.includes(currUser._id) ? 'disabled' : '')%>" type="submit" id="<%=post._id%>downbtn">
-                            <i class="fa fa-thumbs-down" aria-hidden="true"></i>
-                            <span class="downvote-value" id="<%=post._id%>downspan"><%=post.downvoteNum ?? 0%></span>
-                        </button>
-                    </form>
-                    <form class="approve-form d-inline" data-id="<%=post._id%>">
-                        <button class="btn btn-success btn-approve" type="submit" id="<%=post._id%>approvebtn">
-                            <i class="fa fa-check" aria-hidden="true"></i>
-                        </button>
-                    </form>
-                    <button class="btn btn-danger btn-delete" data-id="<%=post._id%>">
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                    </button>
-                <% } else { %>
-                    <form class="upvote-form d-inline" data-id="<%=post._id%>" data-toggle="tooltip" data-placement="bottom" title="gotta login to vote">
-                        <button class="btn btn-secondary btn-upvote disabled" type="submit">&#10224;
-                            <span class="upvote-value" ><%=post.upvoteNum%></span>
-                        </button>
-                    </form>
-                    <form class="downvote-form d-inline" data-id="<%=post._id%>" data-toggle="tooltip" data-placement="bottom" title="gotta login to vote">
-                        <button class="btn btn-secondary btn-downvote disabled" type="submit">&#10225;
-                            <span class="downvote-value"><%=post.downvoteNum%></span>
-                        </button>
-                    </form>
-                <% } %>
-                <a class="btn btn-secondary" href="/posts/<%=post._id%>">
-                    <i class="fa fa-comments" aria-hidden="true"></i> <%=(post.comments) ? post.comments.length : 0 %>
-                </a>
+
+                <%- include('../partials/post-buttons.ejs', { post, currentUser }) -%>
             </div>
         </div>
     </div>
