Filter posts by search query and require admin approval
Add a search filter to post queries and restrict non-admin
users to only see admin-approved posts. Update the navbar
search form to submit queries correctly.

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -20,9 +20,9 @@
                 <a class="nav-link" href="/users/logout">Logout</a>
             <% } %>
         </div>
-        <form class="d-flex">
+        <form class="d-flex" method="GET" action="/">
             <div class="input-group">
-                <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <input type="text" name="q" class="form-control" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <button class="btn btn-outline-primary" type="button" id="button-addon2">
                     <i class="fa fa-search"></i>
                 </button>
