Add MongoDB session store and expose port 8030 in Dockerfile

--- a/views/partials/panel-left.ejs
+++ b/views/partials/panel-left.ejs
@@ -14,7 +14,7 @@
                         <br />
                         <small>Don't have an account? <a href="/users/register">Register</a></small>
                     <% } else { %>
-                        >Welcome, <%=currentUser.username.toUpperCase() %><br />
+                        Welcome, <%=currentUser.username.toUpperCase() %><br />
                         <a class="btn btn-primary" href="/users/logout">Logout</a>
                     <% } %>
                 </div>
